--- a/style.css
+++ b/style.css
@@ -134,3 +134,111 @@ main {
 .btn1 {
   margin-right: 50px;
 }
+
+#info {
+  padding: 70px;
+  max-width: 1700px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 80px;
+  font-family: "poppins";
+}
+
+.prendas-info-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 50px;
+  font-family: "poppins";
+}
+
+#info h2 {
+  font-size: 2rem;
+  font-weight: 800;
+}
+
+.info-card {
+  background: var(--secondary);
+  width: 300px;
+  height: 290px;
+  padding: 40px 30px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.info-card img {
+  width: 330px;
+  height: 330px;
+  margin-top: 50px;
+}
+
+.info-card p {
+  text-align: center;
+  font-size: 14px;
+  color: whitesmoke;
+}
+
+.container-footer {
+  margin: 0 auto;
+}
+
+#contacto {
+  max-width: 1700px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 80px;
+  margin-top: 100px;
+  font-family: "poppins";
+}
+
+.footer-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+}
+
+.footer-links {
+  padding: 0 15px;
+  margin-bottom: 100px;
+  gap: 80px;
+  display: flex;
+}
+
+.footer-links h4 {
+  font-size: 20px;
+  color: whitesmoke;
+  margin-bottom: 40px;
+  font-weight: 500;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #00c3ff;
+  display: inline-block;
+}
+
+.footer-links ul li a {
+  font-size: 18px;
+  text-decoration: none;
+  color: #e9e3e3;
+  display: block;
+  margin-bottom: 15px;
+  gap: 80px;
+}
+
+.social-link {
+  display: flex;
+  align-items: flex-start;
+  padding: 5px;
+  gap: 25px;
+  font-size: 40px;
+}
+
+.social-link a {
+  color: white;
+}
